--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "devDependencies": {
     "@notionhq/client": "^0.4.12",
-    "astro": "^0.22.11",
+    "astro": "^0.21.12",
+    "autoprefixer": "^10.4.2",
     "dayjs": "^1.10.7",
+    "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2",
+    "postcss-preset-env": "^7.2.3",
     "reading-time": "^1.5.0",
-    "tailwindcss": "^3.0.13"
+    "sass": "^1.48.0",
+    "tailwindcss": "^3.0.15"
   }
 }
